--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  functions = "functions"  # Points to your functions folder
+  functions = "netlify/functions"  # Points to your functions folder
 
 # Optional: Specify Python version (recommended)
 [build.environment]
